chapters/09/apache-tls.yaml
# apache-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apache-tls
spec:
  tls:
  - hosts:
      - apache-tls.10.0.1.1.sslip.io
    secretName: my-tls-certs
  rules:
  - host: apache-tls.10.0.1.1.sslip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: apache
          servicePort: 80
